Added support for multiple filter arguments on each column. Added mock data for initial database seeding.
Upgraded to .NET 8.

DataTable now contains support for:
- Specifying default sort order.
- Defining column names for each property.
- Setting the CSS class specific to each row.

--- a/BlazorLogViewer.WASM/Properties/launchSettings.json
+++ b/BlazorLogViewer.WASM/Properties/launchSettings.json
@@ -3,6 +3,7 @@
     "BlazorLogViewer.WASM": {
       "commandName": "Project",
       "launchBrowser": true,
+      "launchUrl": "logentriestable",
       "environmentVariables": {
         "ASPNETCORE_ENVIRONMENT": "Development"
       },
