--- a/BlazorLogViewer.WASM/wwwroot/appsettings.json
+++ b/BlazorLogViewer.WASM/wwwroot/appsettings.json
@@ -8,5 +8,5 @@
 	"AllowedHosts": "localhost",
 	"TimeSpan": "-1000",
 	"LogEntryServiceUrl": "https://localhost:7228",
-	"LogEntryServiceUrlIIS": "https://localhost:44375",
+	"LogEntryServiceUrlIIS": "https://localhost:44375"
 }
