DataTable now raises an event when a FilterOperator changes. DataTable's FilterOperators list is now public, but cannot be modified.
The DataTable's empty data filters are now stored in a separate dictionary, instead of having them in the same FilterOperationsProtected list as the other filters.
This makes it easier for callers to only read the contents of filled out filters.

GetPropertiesFromQueryString no longer changes the set of filters, if the filters described in the query string matches the currently defined set of filters.

Now checks that the number of filters from the URL matches the number of filter properties, when determining whether the URL has changed the filter properties.

Added Reload button to DataTable.
Added CSS to DataFilter class.

Added PageSizeOptions property.
Added comments to DataTable razor page.

Moved CSS from site.css and app.css to DataTable.razor.css

Added CSS to use, when selection of text is disabled.

Modified the DataTable style to make the scrollbar wider.

Authentication can now be toggled off using a "DisableAuthentication" key in the appSettings file.

Removed duplicate column-filter styles from css files.
Input box width is now correct in the filter table.

Added date and timespan formatting of values, for the LogEntriesTable.

DataTable.Reload method now throws an InvalidOperationException if trying to reload when the Table property is null.

Reloading table data now clears selected items.

Copy to clipboard no longer copies data filter cells to the clipboard.

Added range selection and deselection.

--- a/LogEntryDataAccess/appsettings.Development.json
+++ b/LogEntryDataAccess/appsettings.Development.json
@@ -1,9 +1,10 @@
 {
-  "Logging": {
-	"LogLevel": {
-		"Default": "Warning",
-		"Microsoft.AspNetCore": "Warning",
-		"LogEntryDataAccess.Controllers.LogEntryController": "Trace"
-	}
-  }
+	"Logging": {
+		"LogLevel": {
+			"Default": "Warning",
+			"Microsoft.AspNetCore": "Warning",
+			"LogEntryDataAccess.Controllers.LogEntryController": "Trace"
+		}
+	},
+	"DisableAuthentication": "true"
 }
